Add vars to contest-level statements.

--- a/contest/contest.rbx.yml
+++ b/contest/contest.rbx.yml
@@ -25,3 +25,6 @@ statements:
       - statement/maratona.sty
       - statement/*.png
       - statement/*.pdf
+vars:
+  date: "08 de Junho de 2024"
+  year: 2024
